
cargo-features = ["edition2024"]

[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
name = "blueshift_escrow"


[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true # AMM 项目强烈建议开启溢出检查
panic = "abort"

[dependencies]
# pinocchio = "0.10.1"
# pinocchio-associated-token-account = "0.3.0"
# pinocchio-system = "0.5.0"
# pinocchio-token = "0.5.0"
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
pinocchio-associated-token-account = "0.3.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }